fixed portfolio align with portfolio class in css

--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,7 @@ body {
     text-align: center;
     font-size: 20%;
 }
+
+.portfolio {
+    text-align: center;
+}
